Added more method in API and few changes in UI

--- a/UI/SecondHandCarsApp/src/app/Components/cars/cars.component.html
+++ b/UI/SecondHandCarsApp/src/app/Components/cars/cars.component.html
@@ -1,1 +1,7 @@
-<p>cars works!</p>
+
+<div class="product-description">
+    <span>CAR</span>
+    <br/>
+    <label>Car Model :</label><h1>{{modelname}}</h1>
+    <p>The preferred choice of a vast range of acclaimed DJs. Punchy, bass-focused sound and high isolation. Sturdy headband and on-ear cushions suitable for live performance</p>
+  </div>
