--- a/UI/SecondHandCarsApp/src/app/Components/home/home.component.css
+++ b/UI/SecondHandCarsApp/src/app/Components/home/home.component.css
@@ -1,3 +1,19 @@
 mat-grid-tile {
     background: rgb(171, 231, 198);
+    justify-content: left;
   }
+
+  ::ng-deep mat-grid-tile .mat-figure {
+    
+    justify-content: left;  /*horizontal alignment*/
+}
+
+  .car-list{
+    
+    color: black;
+    font-weight: bold;
+    font-family:sans-serif;
+    
+  }
+
+  
