--- a/UI/SecondHandCarsApp/src/app/Components/home/home.component.html
+++ b/UI/SecondHandCarsApp/src/app/Components/home/home.component.html
@@ -1,9 +1,18 @@
-<mat-grid-list cols="2" rowHeight="2:1">
+<mat-grid-list cols="1" rowHeight="25:1">
 
-  <ul *ngFor =" let item of AllCarDetails" >
-    <mat-grid-tile (click) = "nagivateToCars()" > {{item.name}}</mat-grid-tile>
+  <ul *ngFor =" let item of AllVehicleDetails | sortBy:'desc': 'item.date_added'">
+    <mat-grid-tile (click) = "nagivateToCars()" class="car-tile">    
+    
+      <div >
+        <h2>{{item.model}}</h2>     <div>Price : {{item.price}} , added on {{item.date_added}}</div>
+        
+    </div>
+    
+    </mat-grid-tile>
   </ul>
     
   </mat-grid-list>
 
   <router-outlet></router-outlet>
+
+  
